2009-06-19  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (EXTRA_DIST): Fix path to gnupg2 patch file.

2009-06-19  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* NEWS: Change compendium version.

	* configure.ac: Change compendium date and version (de).

2009-06-19  Marcus Brinkmann  <marcus@g10code.com>

	* packages/packages.current: Update pinentry to 0.7.6.

2009-06-18  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Use name directive for kdesupport.

2009-06-18  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* packages/packages.current: Update kdesupport.

2009-06-18  Marcus Brinkmann  <marcus@g10code.com>

	* packages/packages.current: Update gpgme to 1.2.0.

2009-06-18  Werner Koch  <wk@g10code.com>

	* NEWS: Remove unneeded info about the 1.9 beta releases.

	* patches/gnupg2-2.0.9/01-scd-pw2.patch: New.

2009-06-17  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* packages/packages.current: Update kdesupport.

2009-06-17  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update GnuPG and Dirmngr.

	* src/installer.nsi (PrintBetaWarning): Comment out.
	(PrintNonAdminWarning): Do not call beta warning.

2009-06-10  Werner Koch  <wk@g10code.com>

	* src/uninst-gpg4win.nsi: Remove pub/.

2009-06-09  Werner Koch  <wk@g10code.com>

	* src/inst-gnupg2.nsi: Install gpgconf into pub/.
	* src/uninst-gnupg2.nsi: Uninsteall wrapped gpgconf.

	* packages/packages.current: Update GPGME, GPA and GnuPG.

2009-06-08  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update GnuPG and GPA.

2009-06-05  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update libksba.

2009-05-26  Marcus Brinkmann  <marcus@g10code.com>

	* src/inst-pinentry.nsi: Install pinentry-qt-4.
	* src/uninst-pinentry.nsi: Uninstall pinentry-qt-4.

2009-05-14  Werner Koch  <wk@g10code.com>

	Release 1.9.16.

2009-05-14  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* packages/packages.current: Update kdelibs and kleopatra.